# ocr-lang

./: .gitattributes  Cargo.toml  README.md  grammar.ebnf  index.html  ocr_lang.ebnf
.github/workflows/: build_and_test.yaml  doc.yaml
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  main.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lexer.rs  lib.rs  position.rs  token.rs
crates/core/tests/: test_lexer.rs
crates/lang_core/: Cargo.toml
crates/lang_core/src/: error.rs  lexer.rs  lib.rs  position.rs  token.rs
crates/lang_core/tests/: test_lexer.rs
defs/: gcse.ebnf
doc/: crates.js  search-index.js  settings.html  source-files.js
doc/cli/: all.html  fn.handle_error.html  fn.main.html  fn.setup_logging.html  index.html  sidebar-items.js
doc/cli/args/: enum.LogLevel.html  enum.Specification.html  index.html  struct.Args.html
doc/core/: all.html  enum.ErrorKind.html  enum.Token.html  index.html  sidebar-items.js  struct.Error.html  struct.Lexer.html
doc/core/error/: enum.ErrorKind.html  index.html  sidebar-items.js  struct.Error.html
doc/core/lexer/: index.html  sidebar-items.js  struct.Lexer.html  type.EmptyResult.html
doc/core/position/: index.html  sidebar-items.js  struct.Position.html
doc/core/token/: enum.Token.html  index.html
doc/lang_core/: all.html  enum.ErrorKind.html  enum.Token.html  index.html  struct.Error.html  struct.Lexer.html
doc/ocr_lang/: all.html  fn.ocr_lang_main.html  fn.setup_logging.html  index.html  sidebar-items.js
src/: args.rs  error.rs  lexer.rs  lib.rs  main.rs  position.rs  token.rs
(+75 files in other folders)
