[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
clap = { version = "4.0.17", features = ["derive", "cargo"] }
fern = "0.6.1"
log = "0.4.17"
core = { path = "../core" }
